fixing compiler to include lib files and downloading libs